versions/v4.1.0/doxygen/html/hl7800_8h.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/doxygen/html/hl7800_8h.html
original_path: doxygen/html/hl7800_8h.html
---

| Logo | Zephyr API Documentation 4.1.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

hl7800.h File Reference

HL7800 modem public API header file.
[More...](#details)

`#include <[zephyr/types.h](include_2zephyr_2types_8h_source.md)>`  
`#include <time.h>`

[Go to the source code of this file.](hl7800_8h_source.md)

| Data Structures | |
| --- | --- |
| struct | [mdm\_hl7800\_apn](structmdm__hl7800__apn.md) |
| struct | [mdm\_hl7800\_site\_survey](structmdm__hl7800__site__survey.md) |
| struct | [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) |
| struct | [mdm\_hl7800\_polte\_registration\_event\_data](structmdm__hl7800__polte__registration__event__data.md) |
| struct | [mdm\_hl7800\_polte\_location\_data](structmdm__hl7800__polte__location__data.md) |
| struct | [mdm\_hl7800\_callback\_agent](structmdm__hl7800__callback__agent.md) |

| Macros | |
| --- | --- |
| #define | [MDM\_HL7800\_REVISION\_MAX\_SIZE](#a2a9d979df7a39d049f341ce3706343a1)   29 |
| #define | [MDM\_HL7800\_REVISION\_MAX\_STRLEN](#a506266d9f3df21657fa27c92e2a4b3a9)   ([MDM\_HL7800\_REVISION\_MAX\_SIZE](#a2a9d979df7a39d049f341ce3706343a1) - 1) |
| #define | [MDM\_HL7800\_IMEI\_SIZE](#aadb01caea83021e2a32f863372e0bc40)   16 |
| #define | [MDM\_HL7800\_IMEI\_STRLEN](#aec5666644e15e4bfb8970815488c273e)   ([MDM\_HL7800\_IMEI\_SIZE](#aadb01caea83021e2a32f863372e0bc40) - 1) |
| #define | [MDM\_HL7800\_ICCID\_MAX\_SIZE](#a633ec3cdd878098287fea81ee7b02b43)   21 |
| #define | [MDM\_HL7800\_ICCID\_MAX\_STRLEN](#a32865364e6fd4641b9be897bfd6c293f)   ([MDM\_HL7800\_ICCID\_MAX\_SIZE](#a633ec3cdd878098287fea81ee7b02b43) - 1) |
| #define | [MDM\_HL7800\_SERIAL\_NUMBER\_SIZE](#ae842bbecef777b83225577189205e085)   15 |
| #define | [MDM\_HL7800\_SERIAL\_NUMBER\_STRLEN](#a10594faa869ccfdcd9d51309cf52d7c7)   ([MDM\_HL7800\_SERIAL\_NUMBER\_SIZE](#ae842bbecef777b83225577189205e085) - 1) |
| #define | [MDM\_HL7800\_APN\_MAX\_SIZE](#a5cc5aad6ab04405999246790dd850046)   64 |
| #define | [MDM\_HL7800\_APN\_USERNAME\_MAX\_SIZE](#acb5d0f96845b17b84c746dcea6bd732a)   65 |
| #define | [MDM\_HL7800\_APN\_PASSWORD\_MAX\_SIZE](#abc1a2d9744225bc82f3f4b14d365a0fe)   65 |
| #define | [MDM\_HL7800\_APN\_MAX\_STRLEN](#af58865f84686e963f5c3fdff2eaea26a)   ([MDM\_HL7800\_APN\_MAX\_SIZE](#a5cc5aad6ab04405999246790dd850046) - 1) |
| #define | [MDM\_HL7800\_APN\_USERNAME\_MAX\_STRLEN](#a80f2f5814be64d8ad75b5ced8017ca0d)   ([MDM\_HL7800\_APN\_USERNAME\_MAX\_SIZE](#acb5d0f96845b17b84c746dcea6bd732a) - 1) |
| #define | [MDM\_HL7800\_APN\_PASSWORD\_MAX\_STRLEN](#a2e0973dd337183b6df1209df6a70e017)   ([MDM\_HL7800\_APN\_PASSWORD\_MAX\_SIZE](#abc1a2d9744225bc82f3f4b14d365a0fe) - 1) |
| #define | [MDM\_HL7800\_APN\_CMD\_MAX\_SIZE](#a893cc0edcd292a5663439d20fb56a083) |
| #define | [MDM\_HL7800\_APN\_CMD\_MAX\_STRLEN](#ab0c04e84f9d80302d1e25c3df6d4bd21)   ([MDM\_HL7800\_APN\_CMD\_MAX\_SIZE](#a893cc0edcd292a5663439d20fb56a083) - 1) |
| #define | [MDM\_HL7800\_LTE\_BAND\_STR\_SIZE](#a8364e415a31bdce35ce76039de657b36)   21 |
| #define | [MDM\_HL7800\_LTE\_BAND\_STRLEN](#a3381c94afeaabed84e2027d4b947df2d)   ([MDM\_HL7800\_LTE\_BAND\_STR\_SIZE](#a8364e415a31bdce35ce76039de657b36) - 1) |
| #define | [MDM\_HL7800\_OPERATOR\_INDEX\_SIZE](#a0384f58773f79651bbb66104c90aa050)   3 |
| #define | [MDM\_HL7800\_OPERATOR\_INDEX\_STRLEN](#ab52244c336043aa7458ba26a2b6dcf5e)   ([MDM\_HL7800\_OPERATOR\_INDEX\_SIZE](#a0384f58773f79651bbb66104c90aa050) - 1) |
| #define | [MDM\_HL7800\_IMSI\_MIN\_STR\_SIZE](#a523acdbfa564f3e83d93f7fbc50b8bc8)   15 |
| #define | [MDM\_HL7800\_IMSI\_MAX\_STR\_SIZE](#ac93538b6d4666aed22cef92b71e63df7)   16 |
| #define | [MDM\_HL7800\_IMSI\_MAX\_STRLEN](#a645750b25f14ccfb2b6137243081a7ad)   ([MDM\_HL7800\_IMSI\_MAX\_STR\_SIZE](#ac93538b6d4666aed22cef92b71e63df7) - 1) |
| #define | [MDM\_HL7800\_MODEM\_FUNCTIONALITY\_SIZE](#a1a0b40a992ae234953283d27dbeda438)   2 |
| #define | [MDM\_HL7800\_MODEM\_FUNCTIONALITY\_STRLEN](#acdc8b7fa76054fa28cc1fa3ddd2543eb)   ([MDM\_HL7800\_MODEM\_FUNCTIONALITY\_SIZE](#a1a0b40a992ae234953283d27dbeda438) - 1) |
| #define | [MDM\_HL7800\_MAX\_GPS\_STR\_SIZE](#af4840e7a40163477ccd00601467a8e8f)   33 |
| #define | [MDM\_HL7800\_MAX\_POLTE\_USER\_ID\_SIZE](#a10db6322599d499eccf8116f692a42e1)   16 |
| #define | [MDM\_HL7800\_MAX\_POLTE\_PASSWORD\_SIZE](#a781329540d46b975eb8d6bf9870cf4a8)   16 |
| #define | [MDM\_HL7800\_MAX\_POLTE\_LOCATION\_STR\_SIZE](#a060fccbbb60656b655abb3a8ad59f428)   33 |
| #define | [MDM\_HL7800\_POLTE\_SERVER\_ERROR](#afbafa9aa28ebfdca72e19fca6cb944ea)   10 |
| #define | [MDM\_HL7800\_SET\_POLTE\_USER\_AND\_PASSWORD\_FMT\_STR](#a6bc676bde1502d266c710b729b61182c)   "AT%%POLTECMD=\"SERVERAUTH\",\"%s\",\"%s\"" |

| Typedefs | |
| --- | --- |
| typedef void(\* | [mdm\_hl7800\_event\_callback\_t](#afa044d03d9bfbc2f63088da4f094edfc)) (enum [mdm\_hl7800\_event](#a3f7b0647d9ff01328e5536478a73aaf9) event, void \*event\_data) |
|  | event - The type of event event\_data - Pointer to event specific data structure: HL7800\_EVENT\_NETWORK\_STATE\_CHANGE - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_APN\_UPDATE - struct [mdm\_hl7800\_apn](structmdm__hl7800__apn.md) HL7800\_EVENT\_RSSI - int HL7800\_EVENT\_SINR - int HL7800\_EVENT\_STARTUP\_STATE\_CHANGE - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_SLEEP\_STATE\_CHANGE - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_RAT - int HL7800\_EVENT\_BANDS - string HL7800\_EVENT\_ACTIVE\_BANDS - string HL7800\_EVENT\_FOTA\_STATE - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_FOTA\_COUNT - [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) HL7800\_EVENT\_REVISION - string HL7800\_EVENT\_GPS - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_GPS\_POSITION\_STATUS int HL7800\_EVENT\_POLTE\_REGISTRATION [mdm\_hl7800\_polte\_registration\_event\_data](structmdm__hl7800__polte__registration__event__data.md) HL7800\_EVENT\_POLTE [mdm\_hl7800\_polte\_location\_data](structmdm__hl7800__polte__location__data.md) HL7800\_EVENT\_POLTE\_LOCATE\_STATUS int HL7800\_EVENT\_SITE\_SURVEY [mdm\_hl7800\_site\_survey](structmdm__hl7800__site__survey.md) HL7800\_EVENT\_STATE [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) |

| Enumerations | |
| --- | --- |
| enum | [mdm\_hl7800\_radio\_mode](#a2d26759e8ea3aca2e8e4a6cccac2361a) { [MDM\_RAT\_CAT\_M1](#a2d26759e8ea3aca2e8e4a6cccac2361aac95a4a3318b0683972336c1036f0548e) = 0 , [MDM\_RAT\_CAT\_NB1](#a2d26759e8ea3aca2e8e4a6cccac2361aa30bba3902918ea11995cd3db20319d61) } |
| enum | [mdm\_hl7800\_event](#a3f7b0647d9ff01328e5536478a73aaf9) {     [HL7800\_EVENT\_RESERVED](#a3f7b0647d9ff01328e5536478a73aaf9a7147e1d7ea1df5eb7604c3246a94ec0a) = 0 , [HL7800\_EVENT\_NETWORK\_STATE\_CHANGE](#a3f7b0647d9ff01328e5536478a73aaf9a08a58f10e3d58022ac945b2e68d4145a) , [HL7800\_EVENT\_APN\_UPDATE](#a3f7b0647d9ff01328e5536478a73aaf9a4cf6f0344fa2348f378756e77d5f2804) , [HL7800\_EVENT\_RSSI](#a3f7b0647d9ff01328e5536478a73aaf9abb822dfaec7e96462be791857f9b3fba) ,     [HL7800\_EVENT\_SINR](#a3f7b0647d9ff01328e5536478a73aaf9ac76f3fec60d1ffeca58405cf38bd50fe) , [HL7800\_EVENT\_STARTUP\_STATE\_CHANGE](#a3f7b0647d9ff01328e5536478a73aaf9a0d25a89cd39d581c82ae73fe0a85ba21) , [HL7800\_EVENT\_SLEEP\_STATE\_CHANGE](#a3f7b0647d9ff01328e5536478a73aaf9a7bd6e3e3c19ed2c5ac138c16e03b2562) , [HL7800\_EVENT\_RAT](#a3f7b0647d9ff01328e5536478a73aaf9ac22e246ac6bc5794ae0772bf3dbf5086) ,     [HL7800\_EVENT\_BANDS](#a3f7b0647d9ff01328e5536478a73aaf9a327cd78d882a1a36716236f2cdf28c31) , [HL7800\_EVENT\_ACTIVE\_BANDS](#a3f7b0647d9ff01328e5536478a73aaf9aad01f254032296551f621c888530e9d1) , [HL7800\_EVENT\_FOTA\_STATE](#a3f7b0647d9ff01328e5536478a73aaf9aedd9ae54dfa7a007c18e2a345d0cb0c5) , [HL7800\_EVENT\_FOTA\_COUNT](#a3f7b0647d9ff01328e5536478a73aaf9a3848abb978d465bd0a831fc0b66a33c3) ,     [HL7800\_EVENT\_REVISION](#a3f7b0647d9ff01328e5536478a73aaf9a8a3b921d5bdb205f44576852467c38e2) , [HL7800\_EVENT\_GPS](#a3f7b0647d9ff01328e5536478a73aaf9af3410e6ff2caa844c3b6f9963df485d1) , [HL7800\_EVENT\_GPS\_POSITION\_STATUS](#a3f7b0647d9ff01328e5536478a73aaf9a0b9e7d1fcb8f043c5ac0b242e4c6c772) , [HL7800\_EVENT\_POLTE\_REGISTRATION](#a3f7b0647d9ff01328e5536478a73aaf9aead019c4cd55d1f54fb16ddef7f8277c) ,     [HL7800\_EVENT\_POLTE\_LOCATE\_STATUS](#a3f7b0647d9ff01328e5536478a73aaf9a7ee246b282ac147aafa45969060c5280) , [HL7800\_EVENT\_POLTE](#a3f7b0647d9ff01328e5536478a73aaf9a1fb1cd6b652c52ebf12e9741649f8630) , [HL7800\_EVENT\_SITE\_SURVEY](#a3f7b0647d9ff01328e5536478a73aaf9a37463d52131771a296fb141c797b3e14) , [HL7800\_EVENT\_STATE](#a3f7b0647d9ff01328e5536478a73aaf9a9189ebbdcf3175881a0e55ac9867acbf)   } |
| enum | [mdm\_hl7800\_state](#a4b00cc03cc14b3812bed4a57aeea822c) { [HL7800\_STATE\_NOT\_READY](#a4b00cc03cc14b3812bed4a57aeea822caccfc2361ab2bea50b510c428786a9a07) = 0 , [HL7800\_STATE\_INITIALIZED](#a4b00cc03cc14b3812bed4a57aeea822ca44858cd6e73be2697e39f60aa54565be) } |
| enum | [mdm\_hl7800\_startup\_state](#aefcf9c39983d8f3f58bcd1a24ca04e99) {     [HL7800\_STARTUP\_STATE\_READY](#aefcf9c39983d8f3f58bcd1a24ca04e99aac2ef169e3273dd11331acae3abb9c6e) = 0 , [HL7800\_STARTUP\_STATE\_WAITING\_FOR\_ACCESS\_CODE](#aefcf9c39983d8f3f58bcd1a24ca04e99a60dd736ae85eeafaefce839b623c530f) , [HL7800\_STARTUP\_STATE\_SIM\_NOT\_PRESENT](#aefcf9c39983d8f3f58bcd1a24ca04e99a92593373e0efcb87471c6d0325f1c2e6) , [HL7800\_STARTUP\_STATE\_SIMLOCK](#aefcf9c39983d8f3f58bcd1a24ca04e99a098e678b80c7148972d572f6dac763d6) ,     [HL7800\_STARTUP\_STATE\_UNRECOVERABLE\_ERROR](#aefcf9c39983d8f3f58bcd1a24ca04e99a1b88f9edf57f6fe1b9f4b31ecb196632) , [HL7800\_STARTUP\_STATE\_UNKNOWN](#aefcf9c39983d8f3f58bcd1a24ca04e99a9d2a5fd088822989fc109cb3add31393) , [HL7800\_STARTUP\_STATE\_INACTIVE\_SIM](#aefcf9c39983d8f3f58bcd1a24ca04e99a9999f1a90165d5996a7a2ff415db53d6)   } |
| enum | [mdm\_hl7800\_network\_state](#a65c8ed3a7c2a2aee39ca65e57f33b773) {     [HL7800\_NOT\_REGISTERED](#a65c8ed3a7c2a2aee39ca65e57f33b773a94fe4bdd729ba6df15d9e9aa53998599) = 0 , [HL7800\_HOME\_NETWORK](#a65c8ed3a7c2a2aee39ca65e57f33b773a7e5bdc7f85c2d2f6ec62beee156e887d) , [HL7800\_SEARCHING](#a65c8ed3a7c2a2aee39ca65e57f33b773a1ad9a81e5ce65dc6eee98a87f880f86a) , [HL7800\_REGISTRATION\_DENIED](#a65c8ed3a7c2a2aee39ca65e57f33b773a4eeb75667b400acaff56ad282bfe6a7c) ,     [HL7800\_OUT\_OF\_COVERAGE](#a65c8ed3a7c2a2aee39ca65e57f33b773ae3f6d693bbe0d0c09a41a0e013fe5a82) , [HL7800\_ROAMING](#a65c8ed3a7c2a2aee39ca65e57f33b773a9d7e014131f399f000965803ccb5e889) , [HL7800\_EMERGENCY](#a65c8ed3a7c2a2aee39ca65e57f33b773a04cac2efa21c949edeefc105effa4a39) = 8 , [HL7800\_UNABLE\_TO\_CONFIGURE](#a65c8ed3a7c2a2aee39ca65e57f33b773a2502129bf7729cce4b1b96ac66dfdd86) = 0xf0   } |
| enum | [mdm\_hl7800\_sleep](#a3396149e553c32a597739096efe2aff7) {     [HL7800\_SLEEP\_UNINITIALIZED](#a3396149e553c32a597739096efe2aff7af81cd0793c7faded881246c6a44b099a) = 0 , [HL7800\_SLEEP\_HIBERNATE](#a3396149e553c32a597739096efe2aff7af1253aa2135a3c1fb0f3a47a1f0265a4) , [HL7800\_SLEEP\_AWAKE](#a3396149e553c32a597739096efe2aff7ac7bf9c4685d31858b98d4188747387ba) , [HL7800\_SLEEP\_LITE\_HIBERNATE](#a3396149e553c32a597739096efe2aff7a58c8b0b7a63a3f85b14d0cd0eea4b452) ,     [HL7800\_SLEEP\_SLEEP](#a3396149e553c32a597739096efe2aff7a37e4283b77e32e890f7cc3eca3985289)   } |
| enum | [mdm\_hl7800\_fota\_state](#a8ed2ea65436083a9b1a49bb1f64574f3) {     [HL7800\_FOTA\_IDLE](#a8ed2ea65436083a9b1a49bb1f64574f3ab7d67051e56e05be47da306377bb8801) , [HL7800\_FOTA\_START](#a8ed2ea65436083a9b1a49bb1f64574f3ae6b160137651a7375551760f938b9da8) , [HL7800\_FOTA\_WIP](#a8ed2ea65436083a9b1a49bb1f64574f3a722b66bd586cc4375253341f1df8d189) , [HL7800\_FOTA\_PAD](#a8ed2ea65436083a9b1a49bb1f64574f3a481fdc3814098383af7b593d4f61ea7b) ,     [HL7800\_FOTA\_SEND\_EOT](#a8ed2ea65436083a9b1a49bb1f64574f3aa78ef13656312bb81aa957a515b337d7) , [HL7800\_FOTA\_FILE\_ERROR](#a8ed2ea65436083a9b1a49bb1f64574f3aaf2423203fdb79510efa9550e2a09bf9) , [HL7800\_FOTA\_INSTALL](#a8ed2ea65436083a9b1a49bb1f64574f3a6761ef6c52c40786c8b595950499851e) , [HL7800\_FOTA\_REBOOT\_AND\_RECONFIGURE](#a8ed2ea65436083a9b1a49bb1f64574f3a5e517d07a386297b5d80110cabc1864b) ,     [HL7800\_FOTA\_COMPLETE](#a8ed2ea65436083a9b1a49bb1f64574f3abd185b07f408b4b7ecb292f31aa6d19a)   } |
| enum | [mdm\_hl7800\_functionality](#af999018ef3ca438a9d3cb7b6611300d2) { [HL7800\_FUNCTIONALITY\_MINIMUM](#af999018ef3ca438a9d3cb7b6611300d2ae2c5fac661bdf514debc98b3e248cea4) = 0 , [HL7800\_FUNCTIONALITY\_FULL](#af999018ef3ca438a9d3cb7b6611300d2ad1e22b662121c8c71b9d34810958b6c2) = 1 , [HL7800\_FUNCTIONALITY\_AIRPLANE](#af999018ef3ca438a9d3cb7b6611300d2a2aca52c7dc8ade5db478f8eaebc4bc33) = 4 } |
| enum | [mdm\_hl7800\_gnss\_event](#a5b6a53d0353ae153f715163ca4e6043b) {     [HL7800\_GNSS\_EVENT\_INVALID](#a5b6a53d0353ae153f715163ca4e6043ba3349e6599deabd375c68bb3688bd9bfd) = -1 , [HL7800\_GNSS\_EVENT\_INIT](#a5b6a53d0353ae153f715163ca4e6043ba3b0b73d5b585d4ed44e00504be60c8ef) , [HL7800\_GNSS\_EVENT\_START](#a5b6a53d0353ae153f715163ca4e6043ba689418f8d35440fe71507ee871f20de1) , [HL7800\_GNSS\_EVENT\_STOP](#a5b6a53d0353ae153f715163ca4e6043bae83741a25baa0ffc3837b0653b01c318) ,     [HL7800\_GNSS\_EVENT\_POSITION](#a5b6a53d0353ae153f715163ca4e6043ba2df7e19144b20afb4bf3566804729db1)   } |
| enum | [mdm\_hl7800\_gnss\_status](#a5253bceab7f3da57f9a2d3918ee72625) { [HL7800\_GNSS\_STATUS\_INVALID](#a5253bceab7f3da57f9a2d3918ee72625aadc2b5c2e8b257e8b12ae7c4f5f35d76) = -1 , [HL7800\_GNSS\_STATUS\_FAILURE](#a5253bceab7f3da57f9a2d3918ee72625a830898a215c51c8a17aab3fb175083b3) , [HL7800\_GNSS\_STATUS\_SUCCESS](#a5253bceab7f3da57f9a2d3918ee72625ab989ec2e119be4f23a37cac5203225ab) } |
| enum | [mdm\_hl7800\_gnss\_position\_event](#aec06e58e1c79e23577d424806b6e696b) {     [HL7800\_GNSS\_POSITION\_EVENT\_INVALID](#aec06e58e1c79e23577d424806b6e696babf5377809190c648e6f3624b4b0b82ee) = -1 , [HL7800\_GNSS\_POSITION\_EVENT\_LOST\_OR\_NOT\_AVAILABLE\_YET](#aec06e58e1c79e23577d424806b6e696bac41b513dd45d2d038b9d7a4a9bae8fe3) , [HL7800\_GNSS\_POSITION\_EVENT\_PREDICTION\_AVAILABLE](#aec06e58e1c79e23577d424806b6e696bad41adce29331d1917c97e94b6409a9b5) , [HL7800\_GNSS\_POSITION\_EVENT\_2D\_AVAILABLE](#aec06e58e1c79e23577d424806b6e696ba1cf9c2fe042ab784450451f36b83818d) ,     [HL7800\_GNSS\_POSITION\_EVENT\_3D\_AVAILABLE](#aec06e58e1c79e23577d424806b6e696ba6bd45fa147597e9c278ec0f27c42efc7) , [HL7800\_GNSS\_POSITION\_EVENT\_FIXED\_TO\_INVALID](#aec06e58e1c79e23577d424806b6e696ba9822e7c1f4a238658592a539d18d0c6d)   } |
| enum | [mdm\_hl7800\_gps\_string\_types](#a45fd97039bb3add8ddb09f803ce9b038) {     [HL7800\_GPS\_STR\_LATITUDE](#a45fd97039bb3add8ddb09f803ce9b038a5faac685b9958871cc3feb990e593b8b) , [HL7800\_GPS\_STR\_LONGITUDE](#a45fd97039bb3add8ddb09f803ce9b038a56f4e3a1a3b2eaacb2c34ec486165de8) , [HL7800\_GPS\_STR\_GPS\_TIME](#a45fd97039bb3add8ddb09f803ce9b038a17989267e59a5169abb7f4d4c8bb3694) , [HL7800\_GPS\_STR\_FIX\_TYPE](#a45fd97039bb3add8ddb09f803ce9b038a7cd77b6bf81380fdaba8cdad863a60be) ,     [HL7800\_GPS\_STR\_HEPE](#a45fd97039bb3add8ddb09f803ce9b038aca3dac785dc09cc6d0780c2ce1956de4) , [HL7800\_GPS\_STR\_ALTITUDE](#a45fd97039bb3add8ddb09f803ce9b038a1eac295eb05a3c4617d35c9fd29aebf6) , [HL7800\_GPS\_STR\_ALT\_UNC](#a45fd97039bb3add8ddb09f803ce9b038a39502c1243b0df6765d6025e8173f214) , [HL7800\_GPS\_STR\_DIRECTION](#a45fd97039bb3add8ddb09f803ce9b038af5bef33ea67240657038a288f600ec25) ,     [HL7800\_GPS\_STR\_HOR\_SPEED](#a45fd97039bb3add8ddb09f803ce9b038ac7f6f8e1d00b25b551a1560b7d998fc8) , [HL7800\_GPS\_STR\_VER\_SPEED](#a45fd97039bb3add8ddb09f803ce9b038a40e32118c8039cfd3c6ef72c8a4d7f85)   } |

| Functions | |
| --- | --- |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_power\_off](#ae270849872a22823512cc87b0bbf877e) (void) |
|  | Power off the HL7800. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_reset](#a956932a3c7d45f5ab0c3c99aa1decfb4) (void) |
|  | Reset the HL7800 (and allow it to reconfigure). |
| void | [mdm\_hl7800\_wakeup](#a430e2a1e2e8173dab93cf7b1e1fcb24d) ([bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) awake) |
|  | Control the wake signals to the HL7800. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_send\_at\_cmd](#a41a1f8f29c6ac8b53e5ef05f156a64a9) (const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \*data, [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) resp\_timeout, char \*resp, [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) \*resp\_len) |
|  | Send an AT command to the HL7800. |
| void | [mdm\_hl7800\_get\_signal\_quality](#ad7d20cde62d5e7c987672cc9c10b152e) (int \*rsrp, int \*sinr) |
|  | Get the signal quality of the HL7800. |
| char \* | [mdm\_hl7800\_get\_iccid](#af84e782e572faf543a37a40147660eb0) (void) |
|  | Get the SIM card ICCID. |
| char \* | [mdm\_hl7800\_get\_sn](#a1f3a7b2dd7654941006c4a8d5a46af01) (void) |
|  | Get the HL7800 serial number. |
| char \* | [mdm\_hl7800\_get\_imei](#a4278b7f58b77048b8e833d9215183a5f) (void) |
|  | Get the HL7800 IMEI. |
| char \* | [mdm\_hl7800\_get\_fw\_version](#ac65dc452be996e5366360abb314a4d98) (void) |
|  | Get the HL7800 firmware version. |
| char \* | [mdm\_hl7800\_get\_imsi](#a581582e3f7b07f04e6b33e481e2d6e42) (void) |
|  | Get the IMSI. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_update\_apn](#a3bf4e149e475d8a7c1f462c7de2dda80) (char \*access\_point\_name) |
|  | Update the Access Point Name in the modem. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_update\_rat](#a9d295b105e71346fcb283959d2641079) (enum [mdm\_hl7800\_radio\_mode](#a2d26759e8ea3aca2e8e4a6cccac2361a) value) |
|  | Update the Radio Access Technology (mode). |
| [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) | [mdm\_hl7800\_valid\_rat](#a0b3822e97cbb77f4edab74e8bf2c903e) ([uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) value) |
| int | [mdm\_hl7800\_register\_event\_callback](#afab74f2bd3806a23192cae18f65226ad) (struct [mdm\_hl7800\_callback\_agent](structmdm__hl7800__callback__agent.md) \*agent) |
|  | Register a function that is called when a modem event occurs. |
| int | [mdm\_hl7800\_unregister\_event\_callback](#ae2015e7399a17a862048eed89b036c6d) (struct [mdm\_hl7800\_callback\_agent](structmdm__hl7800__callback__agent.md) \*agent) |
|  | Unregister a callback event function. |
| void | [mdm\_hl7800\_generate\_status\_events](#aaac620a4653d772f4d44a73834a8b4cc) (void) |
|  | Force modem module to generate status events. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_get\_local\_time](#afa95fa49240c3412521bade1245bc573) (struct [tm](structtm.md) \*[tm](structtm.md), [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) \*offset) |
|  | Get the local time from the modem's real time clock. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_get\_operator\_index](#a2bb74593dea9486754af21e50f4a6291) (void) |
|  | Read the operator index from the modem. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_get\_functionality](#a32dc9651acf319448da38709fc488d16) (void) |
|  | Get modem functionality. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_set\_functionality](#a1ca397e9e9db680dc6083ba2b4c08a70) (enum [mdm\_hl7800\_functionality](#af999018ef3ca438a9d3cb7b6611300d2) mode) |
|  | Set airplane, normal, or reduced functionality mode. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_set\_gps\_rate](#a2946b1d49c63084188f5f6c5dcebaaf2) ([uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) rate) |
|  | When rate is non-zero: Put modem into Airplane mode. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_polte\_register](#a8501f6d4883ee8577b5cda0f76d2a3dc) (void) |
|  | Register modem/SIM with polte.io. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_polte\_enable](#a22eb248b7aeb36a1c9895c8de6808f08) (char \*user, char \*password) |
|  | Enable PoLTE. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_polte\_locate](#a1708f077ddb438f93b246b223e52a80d) (void) |
|  | Locate device using PoLTE. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_perform\_site\_survey](#a975a4cd75d9d89dd23b182af2376ef91) (void) |
|  | Perform a site survey. |
| int | [mdm\_hl7800\_set\_desired\_sleep\_level](#a2388ecc33d15263091c63185ccda3ea3) (enum [mdm\_hl7800\_sleep](#a3396149e553c32a597739096efe2aff7) level) |
|  | Set desired sleep level. |
| void | [mdm\_hl7800\_register\_wake\_test\_point\_callback](#a16ac0447c88a9f025fc13009e63f46ef) (void(\*func)(int [state](parser__state_8h.md#adc6e5733fc3c22f0a7b2914188c49c90))) |
|  | Allows mapping of WAKE\_UP signal to a user accessible test point on the development board. |
| void | [mdm\_hl7800\_register\_gpio6\_callback](#a0e5213411b27b4c5eeffd746464332a8) (void(\*func)(int [state](parser__state_8h.md#adc6e5733fc3c22f0a7b2914188c49c90))) |
|  | Allows mapping of P1.12\_GPIO6 signal to a user accessible test point on the development board. |
| void | [mdm\_hl7800\_register\_cts\_callback](#aead5a1419d87676f13fdea12f705b125) (void(\*func)(int [state](parser__state_8h.md#adc6e5733fc3c22f0a7b2914188c49c90))) |
|  | Allows mapping of UART1\_CTS signal to a user accessible test point on the development board. |
| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) | [mdm\_hl7800\_set\_bands](#a935e3010e0a2d633e366711c09f634f1) (const char \*bands) |
|  | Set the bands available for the LTE connection. |
| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) | [mdm\_hl7800\_log\_filter\_set](#a838f6aab78e6f41028d381823cb6b118) ([uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) level) |
|  | Set the log level for the modem. |

## Detailed Description

HL7800 modem public API header file.

Allows an application to control the HL7800 modem.

Copyright (c) 2020 Laird Connectivity

SPDX-License-Identifier: Apache-2.0

## Macro Definition Documentation

## [◆ ](#a893cc0edcd292a5663439d20fb56a083)MDM\_HL7800\_APN\_CMD\_MAX\_SIZE

| #define MDM\_HL7800\_APN\_CMD\_MAX\_SIZE |
| --- |

**Value:**

(32 + [MDM\_HL7800\_APN\_USERNAME\_MAX\_STRLEN](#a80f2f5814be64d8ad75b5ced8017ca0d) + \

[MDM\_HL7800\_APN\_PASSWORD\_MAX\_STRLEN](#a2e0973dd337183b6df1209df6a70e017))

[MDM\_HL7800\_APN\_PASSWORD\_MAX\_STRLEN](#a2e0973dd337183b6df1209df6a70e017)

#define MDM\_HL7800\_APN\_PASSWORD\_MAX\_STRLEN

**Definition** hl7800.h:42

[MDM\_HL7800\_APN\_USERNAME\_MAX\_STRLEN](#a80f2f5814be64d8ad75b5ced8017ca0d)

#define MDM\_HL7800\_APN\_USERNAME\_MAX\_STRLEN

**Definition** hl7800.h:40

## [◆ ](#ab0c04e84f9d80302d1e25c3df6d4bd21)MDM\_HL7800\_APN\_CMD\_MAX\_STRLEN

| #define MDM\_HL7800\_APN\_CMD\_MAX\_STRLEN   ([MDM\_HL7800\_APN\_CMD\_MAX\_SIZE](#a893cc0edcd292a5663439d20fb56a083) - 1) |
| --- |

## [◆ ](#a5cc5aad6ab04405999246790dd850046)MDM\_HL7800\_APN\_MAX\_SIZE

| #define MDM\_HL7800\_APN\_MAX\_SIZE   64 |
| --- |

## [◆ ](#af58865f84686e963f5c3fdff2eaea26a)MDM\_HL7800\_APN\_MAX\_STRLEN

| #define MDM\_HL7800\_APN\_MAX\_STRLEN   ([MDM\_HL7800\_APN\_MAX\_SIZE](#a5cc5aad6ab04405999246790dd850046) - 1) |
| --- |

## [◆ ](#abc1a2d9744225bc82f3f4b14d365a0fe)MDM\_HL7800\_APN\_PASSWORD\_MAX\_SIZE

| #define MDM\_HL7800\_APN\_PASSWORD\_MAX\_SIZE   65 |
| --- |

## [◆ ](#a2e0973dd337183b6df1209df6a70e017)MDM\_HL7800\_APN\_PASSWORD\_MAX\_STRLEN

| #define MDM\_HL7800\_APN\_PASSWORD\_MAX\_STRLEN   ([MDM\_HL7800\_APN\_PASSWORD\_MAX\_SIZE](#abc1a2d9744225bc82f3f4b14d365a0fe) - 1) |
| --- |

## [◆ ](#acb5d0f96845b17b84c746dcea6bd732a)MDM\_HL7800\_APN\_USERNAME\_MAX\_SIZE

| #define MDM\_HL7800\_APN\_USERNAME\_MAX\_SIZE   65 |
| --- |

## [◆ ](#a80f2f5814be64d8ad75b5ced8017ca0d)MDM\_HL7800\_APN\_USERNAME\_MAX\_STRLEN

| #define MDM\_HL7800\_APN\_USERNAME\_MAX\_STRLEN   ([MDM\_HL7800\_APN\_USERNAME\_MAX\_SIZE](#acb5d0f96845b17b84c746dcea6bd732a) - 1) |
| --- |

## [◆ ](#a633ec3cdd878098287fea81ee7b02b43)MDM\_HL7800\_ICCID\_MAX\_SIZE

| #define MDM\_HL7800\_ICCID\_MAX\_SIZE   21 |
| --- |

## [◆ ](#a32865364e6fd4641b9be897bfd6c293f)MDM\_HL7800\_ICCID\_MAX\_STRLEN

| #define MDM\_HL7800\_ICCID\_MAX\_STRLEN   ([MDM\_HL7800\_ICCID\_MAX\_SIZE](#a633ec3cdd878098287fea81ee7b02b43) - 1) |
| --- |

## [◆ ](#aadb01caea83021e2a32f863372e0bc40)MDM\_HL7800\_IMEI\_SIZE

| #define MDM\_HL7800\_IMEI\_SIZE   16 |
| --- |

## [◆ ](#aec5666644e15e4bfb8970815488c273e)MDM\_HL7800\_IMEI\_STRLEN

| #define MDM\_HL7800\_IMEI\_STRLEN   ([MDM\_HL7800\_IMEI\_SIZE](#aadb01caea83021e2a32f863372e0bc40) - 1) |
| --- |

## [◆ ](#ac93538b6d4666aed22cef92b71e63df7)MDM\_HL7800\_IMSI\_MAX\_STR\_SIZE

| #define MDM\_HL7800\_IMSI\_MAX\_STR\_SIZE   16 |
| --- |

## [◆ ](#a645750b25f14ccfb2b6137243081a7ad)MDM\_HL7800\_IMSI\_MAX\_STRLEN

| #define MDM\_HL7800\_IMSI\_MAX\_STRLEN   ([MDM\_HL7800\_IMSI\_MAX\_STR\_SIZE](#ac93538b6d4666aed22cef92b71e63df7) - 1) |
| --- |

## [◆ ](#a523acdbfa564f3e83d93f7fbc50b8bc8)MDM\_HL7800\_IMSI\_MIN\_STR\_SIZE

| #define MDM\_HL7800\_IMSI\_MIN\_STR\_SIZE   15 |
| --- |

## [◆ ](#a8364e415a31bdce35ce76039de657b36)MDM\_HL7800\_LTE\_BAND\_STR\_SIZE

| #define MDM\_HL7800\_LTE\_BAND\_STR\_SIZE   21 |
| --- |

## [◆ ](#a3381c94afeaabed84e2027d4b947df2d)MDM\_HL7800\_LTE\_BAND\_STRLEN

| #define MDM\_HL7800\_LTE\_BAND\_STRLEN   ([MDM\_HL7800\_LTE\_BAND\_STR\_SIZE](#a8364e415a31bdce35ce76039de657b36) - 1) |
| --- |

## [◆ ](#af4840e7a40163477ccd00601467a8e8f)MDM\_HL7800\_MAX\_GPS\_STR\_SIZE

| #define MDM\_HL7800\_MAX\_GPS\_STR\_SIZE   33 |
| --- |

## [◆ ](#a060fccbbb60656b655abb3a8ad59f428)MDM\_HL7800\_MAX\_POLTE\_LOCATION\_STR\_SIZE

| #define MDM\_HL7800\_MAX\_POLTE\_LOCATION\_STR\_SIZE   33 |
| --- |

## [◆ ](#a781329540d46b975eb8d6bf9870cf4a8)MDM\_HL7800\_MAX\_POLTE\_PASSWORD\_SIZE

| #define MDM\_HL7800\_MAX\_POLTE\_PASSWORD\_SIZE   16 |
| --- |

## [◆ ](#a10db6322599d499eccf8116f692a42e1)MDM\_HL7800\_MAX\_POLTE\_USER\_ID\_SIZE

| #define MDM\_HL7800\_MAX\_POLTE\_USER\_ID\_SIZE   16 |
| --- |

## [◆ ](#a1a0b40a992ae234953283d27dbeda438)MDM\_HL7800\_MODEM\_FUNCTIONALITY\_SIZE

| #define MDM\_HL7800\_MODEM\_FUNCTIONALITY\_SIZE   2 |
| --- |

## [◆ ](#acdc8b7fa76054fa28cc1fa3ddd2543eb)MDM\_HL7800\_MODEM\_FUNCTIONALITY\_STRLEN

| #define MDM\_HL7800\_MODEM\_FUNCTIONALITY\_STRLEN   ([MDM\_HL7800\_MODEM\_FUNCTIONALITY\_SIZE](#a1a0b40a992ae234953283d27dbeda438) - 1) |
| --- |

## [◆ ](#a0384f58773f79651bbb66104c90aa050)MDM\_HL7800\_OPERATOR\_INDEX\_SIZE

| #define MDM\_HL7800\_OPERATOR\_INDEX\_SIZE   3 |
| --- |

## [◆ ](#ab52244c336043aa7458ba26a2b6dcf5e)MDM\_HL7800\_OPERATOR\_INDEX\_STRLEN

| #define MDM\_HL7800\_OPERATOR\_INDEX\_STRLEN   ([MDM\_HL7800\_OPERATOR\_INDEX\_SIZE](#a0384f58773f79651bbb66104c90aa050) - 1) |
| --- |

## [◆ ](#afbafa9aa28ebfdca72e19fca6cb944ea)MDM\_HL7800\_POLTE\_SERVER\_ERROR

| #define MDM\_HL7800\_POLTE\_SERVER\_ERROR   10 |
| --- |

## [◆ ](#a2a9d979df7a39d049f341ce3706343a1)MDM\_HL7800\_REVISION\_MAX\_SIZE

| #define MDM\_HL7800\_REVISION\_MAX\_SIZE   29 |
| --- |

## [◆ ](#a506266d9f3df21657fa27c92e2a4b3a9)MDM\_HL7800\_REVISION\_MAX\_STRLEN

| #define MDM\_HL7800\_REVISION\_MAX\_STRLEN   ([MDM\_HL7800\_REVISION\_MAX\_SIZE](#a2a9d979df7a39d049f341ce3706343a1) - 1) |
| --- |

## [◆ ](#ae842bbecef777b83225577189205e085)MDM\_HL7800\_SERIAL\_NUMBER\_SIZE

| #define MDM\_HL7800\_SERIAL\_NUMBER\_SIZE   15 |
| --- |

## [◆ ](#a10594faa869ccfdcd9d51309cf52d7c7)MDM\_HL7800\_SERIAL\_NUMBER\_STRLEN

| #define MDM\_HL7800\_SERIAL\_NUMBER\_STRLEN   ([MDM\_HL7800\_SERIAL\_NUMBER\_SIZE](#ae842bbecef777b83225577189205e085) - 1) |
| --- |

## [◆ ](#a6bc676bde1502d266c710b729b61182c)MDM\_HL7800\_SET\_POLTE\_USER\_AND\_PASSWORD\_FMT\_STR

| #define MDM\_HL7800\_SET\_POLTE\_USER\_AND\_PASSWORD\_FMT\_STR   "AT%%POLTECMD=\"SERVERAUTH\",\"%s\",\"%s\"" |
| --- |

## Typedef Documentation

## [◆ ](#afa044d03d9bfbc2f63088da4f094edfc)mdm\_hl7800\_event\_callback\_t

| typedef void(\* mdm\_hl7800\_event\_callback\_t) (enum [mdm\_hl7800\_event](#a3f7b0647d9ff01328e5536478a73aaf9) event, void \*event\_data) |
| --- |

event - The type of event event\_data - Pointer to event specific data structure: HL7800\_EVENT\_NETWORK\_STATE\_CHANGE - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_APN\_UPDATE - struct [mdm\_hl7800\_apn](structmdm__hl7800__apn.md) HL7800\_EVENT\_RSSI - int HL7800\_EVENT\_SINR - int HL7800\_EVENT\_STARTUP\_STATE\_CHANGE - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_SLEEP\_STATE\_CHANGE - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_RAT - int HL7800\_EVENT\_BANDS - string HL7800\_EVENT\_ACTIVE\_BANDS - string HL7800\_EVENT\_FOTA\_STATE - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_FOTA\_COUNT - [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) HL7800\_EVENT\_REVISION - string HL7800\_EVENT\_GPS - [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md) HL7800\_EVENT\_GPS\_POSITION\_STATUS int HL7800\_EVENT\_POLTE\_REGISTRATION [mdm\_hl7800\_polte\_registration\_event\_data](structmdm__hl7800__polte__registration__event__data.md) HL7800\_EVENT\_POLTE [mdm\_hl7800\_polte\_location\_data](structmdm__hl7800__polte__location__data.md) HL7800\_EVENT\_POLTE\_LOCATE\_STATUS int HL7800\_EVENT\_SITE\_SURVEY [mdm\_hl7800\_site\_survey](structmdm__hl7800__site__survey.md) HL7800\_EVENT\_STATE [mdm\_hl7800\_compound\_event](structmdm__hl7800__compound__event.md)

## Enumeration Type Documentation

## [◆ ](#a3f7b0647d9ff01328e5536478a73aaf9)mdm\_hl7800\_event

| enum [mdm\_hl7800\_event](#a3f7b0647d9ff01328e5536478a73aaf9) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_EVENT\_RESERVED |  |
| HL7800\_EVENT\_NETWORK\_STATE\_CHANGE |  |
| HL7800\_EVENT\_APN\_UPDATE |  |
| HL7800\_EVENT\_RSSI |  |
| HL7800\_EVENT\_SINR |  |
| HL7800\_EVENT\_STARTUP\_STATE\_CHANGE |  |
| HL7800\_EVENT\_SLEEP\_STATE\_CHANGE |  |
| HL7800\_EVENT\_RAT |  |
| HL7800\_EVENT\_BANDS |  |
| HL7800\_EVENT\_ACTIVE\_BANDS |  |
| HL7800\_EVENT\_FOTA\_STATE |  |
| HL7800\_EVENT\_FOTA\_COUNT |  |
| HL7800\_EVENT\_REVISION |  |
| HL7800\_EVENT\_GPS |  |
| HL7800\_EVENT\_GPS\_POSITION\_STATUS |  |
| HL7800\_EVENT\_POLTE\_REGISTRATION |  |
| HL7800\_EVENT\_POLTE\_LOCATE\_STATUS |  |
| HL7800\_EVENT\_POLTE |  |
| HL7800\_EVENT\_SITE\_SURVEY |  |
| HL7800\_EVENT\_STATE |  |

## [◆ ](#a8ed2ea65436083a9b1a49bb1f64574f3)mdm\_hl7800\_fota\_state

| enum [mdm\_hl7800\_fota\_state](#a8ed2ea65436083a9b1a49bb1f64574f3) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_FOTA\_IDLE |  |
| HL7800\_FOTA\_START |  |
| HL7800\_FOTA\_WIP |  |
| HL7800\_FOTA\_PAD |  |
| HL7800\_FOTA\_SEND\_EOT |  |
| HL7800\_FOTA\_FILE\_ERROR |  |
| HL7800\_FOTA\_INSTALL |  |
| HL7800\_FOTA\_REBOOT\_AND\_RECONFIGURE |  |
| HL7800\_FOTA\_COMPLETE |  |

## [◆ ](#af999018ef3ca438a9d3cb7b6611300d2)mdm\_hl7800\_functionality

| enum [mdm\_hl7800\_functionality](#af999018ef3ca438a9d3cb7b6611300d2) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_FUNCTIONALITY\_MINIMUM |  |
| HL7800\_FUNCTIONALITY\_FULL |  |
| HL7800\_FUNCTIONALITY\_AIRPLANE |  |

## [◆ ](#a5b6a53d0353ae153f715163ca4e6043b)mdm\_hl7800\_gnss\_event

| enum [mdm\_hl7800\_gnss\_event](#a5b6a53d0353ae153f715163ca4e6043b) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_GNSS\_EVENT\_INVALID |  |
| HL7800\_GNSS\_EVENT\_INIT |  |
| HL7800\_GNSS\_EVENT\_START |  |
| HL7800\_GNSS\_EVENT\_STOP |  |
| HL7800\_GNSS\_EVENT\_POSITION |  |

## [◆ ](#aec06e58e1c79e23577d424806b6e696b)mdm\_hl7800\_gnss\_position\_event

| enum [mdm\_hl7800\_gnss\_position\_event](#aec06e58e1c79e23577d424806b6e696b) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_GNSS\_POSITION\_EVENT\_INVALID |  |
| HL7800\_GNSS\_POSITION\_EVENT\_LOST\_OR\_NOT\_AVAILABLE\_YET |  |
| HL7800\_GNSS\_POSITION\_EVENT\_PREDICTION\_AVAILABLE |  |
| HL7800\_GNSS\_POSITION\_EVENT\_2D\_AVAILABLE |  |
| HL7800\_GNSS\_POSITION\_EVENT\_3D\_AVAILABLE |  |
| HL7800\_GNSS\_POSITION\_EVENT\_FIXED\_TO\_INVALID |  |

## [◆ ](#a5253bceab7f3da57f9a2d3918ee72625)mdm\_hl7800\_gnss\_status

| enum [mdm\_hl7800\_gnss\_status](#a5253bceab7f3da57f9a2d3918ee72625) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_GNSS\_STATUS\_INVALID |  |
| HL7800\_GNSS\_STATUS\_FAILURE |  |
| HL7800\_GNSS\_STATUS\_SUCCESS |  |

## [◆ ](#a45fd97039bb3add8ddb09f803ce9b038)mdm\_hl7800\_gps\_string\_types

| enum [mdm\_hl7800\_gps\_string\_types](#a45fd97039bb3add8ddb09f803ce9b038) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_GPS\_STR\_LATITUDE |  |
| HL7800\_GPS\_STR\_LONGITUDE |  |
| HL7800\_GPS\_STR\_GPS\_TIME |  |
| HL7800\_GPS\_STR\_FIX\_TYPE |  |
| HL7800\_GPS\_STR\_HEPE |  |
| HL7800\_GPS\_STR\_ALTITUDE |  |
| HL7800\_GPS\_STR\_ALT\_UNC |  |
| HL7800\_GPS\_STR\_DIRECTION |  |
| HL7800\_GPS\_STR\_HOR\_SPEED |  |
| HL7800\_GPS\_STR\_VER\_SPEED |  |

## [◆ ](#a65c8ed3a7c2a2aee39ca65e57f33b773)mdm\_hl7800\_network\_state

| enum [mdm\_hl7800\_network\_state](#a65c8ed3a7c2a2aee39ca65e57f33b773) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_NOT\_REGISTERED |  |
| HL7800\_HOME\_NETWORK |  |
| HL7800\_SEARCHING |  |
| HL7800\_REGISTRATION\_DENIED |  |
| HL7800\_OUT\_OF\_COVERAGE |  |
| HL7800\_ROAMING |  |
| HL7800\_EMERGENCY |  |
| HL7800\_UNABLE\_TO\_CONFIGURE |  |

## [◆ ](#a2d26759e8ea3aca2e8e4a6cccac2361a)mdm\_hl7800\_radio\_mode

| enum [mdm\_hl7800\_radio\_mode](#a2d26759e8ea3aca2e8e4a6cccac2361a) |
| --- |

| Enumerator | |
| --- | --- |
| MDM\_RAT\_CAT\_M1 |  |
| MDM\_RAT\_CAT\_NB1 |  |

## [◆ ](#a3396149e553c32a597739096efe2aff7)mdm\_hl7800\_sleep

| enum [mdm\_hl7800\_sleep](#a3396149e553c32a597739096efe2aff7) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_SLEEP\_UNINITIALIZED |  |
| HL7800\_SLEEP\_HIBERNATE |  |
| HL7800\_SLEEP\_AWAKE |  |
| HL7800\_SLEEP\_LITE\_HIBERNATE |  |
| HL7800\_SLEEP\_SLEEP |  |

## [◆ ](#aefcf9c39983d8f3f58bcd1a24ca04e99)mdm\_hl7800\_startup\_state

| enum [mdm\_hl7800\_startup\_state](#aefcf9c39983d8f3f58bcd1a24ca04e99) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_STARTUP\_STATE\_READY |  |
| HL7800\_STARTUP\_STATE\_WAITING\_FOR\_ACCESS\_CODE |  |
| HL7800\_STARTUP\_STATE\_SIM\_NOT\_PRESENT |  |
| HL7800\_STARTUP\_STATE\_SIMLOCK |  |
| HL7800\_STARTUP\_STATE\_UNRECOVERABLE\_ERROR |  |
| HL7800\_STARTUP\_STATE\_UNKNOWN |  |
| HL7800\_STARTUP\_STATE\_INACTIVE\_SIM |  |

## [◆ ](#a4b00cc03cc14b3812bed4a57aeea822c)mdm\_hl7800\_state

| enum [mdm\_hl7800\_state](#a4b00cc03cc14b3812bed4a57aeea822c) |
| --- |

| Enumerator | |
| --- | --- |
| HL7800\_STATE\_NOT\_READY |  |
| HL7800\_STATE\_INITIALIZED |  |

## Function Documentation

## [◆ ](#aaac620a4653d772f4d44a73834a8b4cc)mdm\_hl7800\_generate\_status\_events()

| void mdm\_hl7800\_generate\_status\_events | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Force modem module to generate status events.

Note
:   This can be used to get the current state when a module initializes later than the modem.

## [◆ ](#a32dc9651acf319448da38709fc488d16)mdm\_hl7800\_get\_functionality()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_get\_functionality | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Get modem functionality.

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) negative errno on failure, else [mdm\_hl7800\_functionality](#af999018ef3ca438a9d3cb7b6611300d2)

## [◆ ](#ac65dc452be996e5366360abb314a4d98)mdm\_hl7800\_get\_fw\_version()

| char \* mdm\_hl7800\_get\_fw\_version | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Get the HL7800 firmware version.

## [◆ ](#af84e782e572faf543a37a40147660eb0)mdm\_hl7800\_get\_iccid()

| char \* mdm\_hl7800\_get\_iccid | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Get the SIM card ICCID.

## [◆ ](#a4278b7f58b77048b8e833d9215183a5f)mdm\_hl7800\_get\_imei()

| char \* mdm\_hl7800\_get\_imei | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Get the HL7800 IMEI.

## [◆ ](#a581582e3f7b07f04e6b33e481e2d6e42)mdm\_hl7800\_get\_imsi()

| char \* mdm\_hl7800\_get\_imsi | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Get the IMSI.

## [◆ ](#afa95fa49240c3412521bade1245bc573)mdm\_hl7800\_get\_local\_time()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_get\_local\_time | ( | struct [tm](structtm.md) \* | *tm*, |
| --- | --- | --- | --- |
|  |  | [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) \* | *offset* ) |

Get the local time from the modem's real time clock.

Parameters
:   | [tm](structtm.md) | time structure |
    | --- | --- |
    | offset | The amount the local time is offset from GMT/UTC in seconds. |

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) 0 if successful

## [◆ ](#a2bb74593dea9486754af21e50f4a6291)mdm\_hl7800\_get\_operator\_index()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_get\_operator\_index | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Read the operator index from the modem.

Return values
:   | negative | error code, 0 on success |
    | --- | --- |

## [◆ ](#ad7d20cde62d5e7c987672cc9c10b152e)mdm\_hl7800\_get\_signal\_quality()

| void mdm\_hl7800\_get\_signal\_quality | ( | int \* | *rsrp*, |
| --- | --- | --- | --- |
|  |  | int \* | *sinr* ) |

Get the signal quality of the HL7800.

If CONFIG\_MODEM\_HL7800\_RSSI\_RATE\_SECONDS is non-zero, then this function returns the value from the last periodic read. If CONFIG\_MODEM\_HL7800\_RSSI\_RATE\_SECONDS is 0, then this may cause the modem to be woken so that the values can be queried.

Parameters
:   | rsrp | Reference Signals Received Power (dBm) Range = -140 dBm to -44 dBm |
    | --- | --- |
    | sinr | Signal to Interference plus Noise Ratio (dB) Range = -128 dB to 40 dB |

## [◆ ](#a1f3a7b2dd7654941006c4a8d5a46af01)mdm\_hl7800\_get\_sn()

| char \* mdm\_hl7800\_get\_sn | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Get the HL7800 serial number.

## [◆ ](#a838f6aab78e6f41028d381823cb6b118)mdm\_hl7800\_log\_filter\_set()

| [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) mdm\_hl7800\_log\_filter\_set | ( | [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) | *level* | ) |  |
| --- | --- | --- | --- | --- | --- |

Set the log level for the modem.

Note
:   It cannot be set higher than CONFIG\_MODEM\_LOG\_LEVEL. If debug level is desired, then it must be compiled with that level.

Parameters
:   | level | 0 (None) - 4 (Debug) |
    | --- | --- |

Return values
:   | new | log level |
    | --- | --- |

## [◆ ](#a975a4cd75d9d89dd23b182af2376ef91)mdm\_hl7800\_perform\_site\_survey()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_perform\_site\_survey | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Perform a site survey.

This command may return different values each time it is run (depending on what is in range).

HL7800\_EVENT\_SITE\_SURVEY is generated for each response received from modem.

Return values
:   | negative | error code, 0 on success |
    | --- | --- |

## [◆ ](#a22eb248b7aeb36a1c9895c8de6808f08)mdm\_hl7800\_polte\_enable()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_polte\_enable | ( | char \* | *user*, |
| --- | --- | --- | --- |
|  |  | char \* | *password* ) |

Enable PoLTE.

Parameters
:   | user | from polte.io or register command callback |
    | --- | --- |
    | password | from polte.io register command callback |

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) negative errno, 0 on success

## [◆ ](#a1708f077ddb438f93b246b223e52a80d)mdm\_hl7800\_polte\_locate()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_polte\_locate | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Locate device using PoLTE.

Note
:   The first HL7800\_EVENT\_POLTE\_LOCATE\_STATUS event indicates the status of issuing the locate command. The second event requires 20-120 seconds to be generated and it contains the location information (or indicates server failure).

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) negative errno, 0 on success

## [◆ ](#a8501f6d4883ee8577b5cda0f76d2a3dc)mdm\_hl7800\_polte\_register()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_polte\_register | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Register modem/SIM with polte.io.

Note
:   It takes around 30 seconds for HL7800\_EVENT\_POLTE\_REGISTRATION to be generated. If the applications saves the user and password information into non-volatile memory, then this command only needs to be run once.

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) negative errno, 0 on success

## [◆ ](#ae270849872a22823512cc87b0bbf877e)mdm\_hl7800\_power\_off()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_power\_off | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Power off the HL7800.

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) 0 for success

## [◆ ](#aead5a1419d87676f13fdea12f705b125)mdm\_hl7800\_register\_cts\_callback()

| void mdm\_hl7800\_register\_cts\_callback | ( | void(\* | *func*)(int [state](parser__state_8h.md#adc6e5733fc3c22f0a7b2914188c49c90)) | ) |  |
| --- | --- | --- | --- | --- | --- |

Allows mapping of UART1\_CTS signal to a user accessible test point on the development board.

Parameters
:   | func | to be called when CTS state changes if sleep level is sleep. The state parameter of the callback follows gpio\_pin\_get definitions, but will default low if there is an error reading pin |
    | --- | --- |

## [◆ ](#afab74f2bd3806a23192cae18f65226ad)mdm\_hl7800\_register\_event\_callback()

| int mdm\_hl7800\_register\_event\_callback | ( | struct [mdm\_hl7800\_callback\_agent](structmdm__hl7800__callback__agent.md) \* | *agent* | ) |  |
| --- | --- | --- | --- | --- | --- |

Register a function that is called when a modem event occurs.

Multiple users registering for callbacks is supported.

Parameters
:   | agent | event callback agent |
    | --- | --- |

Return values
:   | 0 | on success, negative on failure |
    | --- | --- |

## [◆ ](#a0e5213411b27b4c5eeffd746464332a8)mdm\_hl7800\_register\_gpio6\_callback()

| void mdm\_hl7800\_register\_gpio6\_callback | ( | void(\* | *func*)(int [state](parser__state_8h.md#adc6e5733fc3c22f0a7b2914188c49c90)) | ) |  |
| --- | --- | --- | --- | --- | --- |

Allows mapping of P1.12\_GPIO6 signal to a user accessible test point on the development board.

Parameters
:   | func | to be called when modem wakes/sleeps is sleep level is hibernate or lite hibernate. The state parameter of the callback follows gpio\_pin\_get definitions, but will default high if there is an error reading pin |
    | --- | --- |

## [◆ ](#a16ac0447c88a9f025fc13009e63f46ef)mdm\_hl7800\_register\_wake\_test\_point\_callback()

| void mdm\_hl7800\_register\_wake\_test\_point\_callback | ( | void(\* | *func*)(int [state](parser__state_8h.md#adc6e5733fc3c22f0a7b2914188c49c90)) | ) |  |
| --- | --- | --- | --- | --- | --- |

Allows mapping of WAKE\_UP signal to a user accessible test point on the development board.

Parameters
:   | func | to be called when application requests modem wake/sleep. The state parameter of the callback is 1 when modem should stay awake, 0 when modem can sleep |
    | --- | --- |

## [◆ ](#a956932a3c7d45f5ab0c3c99aa1decfb4)mdm\_hl7800\_reset()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_reset | ( | void |  | ) |  |
| --- | --- | --- | --- | --- | --- |

Reset the HL7800 (and allow it to reconfigure).

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) >= 0 for success, < 0 for failure

## [◆ ](#a41a1f8f29c6ac8b53e5ef05f156a64a9)mdm\_hl7800\_send\_at\_cmd()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_send\_at\_cmd | ( | const [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) \* | *data*, |
| --- | --- | --- | --- |
|  |  | [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) | *resp\_timeout*, |
|  |  | char \* | *resp*, |
|  |  | [uint16\_t](stdint_8h.md#a5debae8b2a1ec20a6694c0c443ee399e) \* | *resp\_len* ) |

Send an AT command to the HL7800.

Note
:   This API should only be used for debug purposes. It is possible to break the driver using this API.

Parameters
:   | data | AT command string |
    | --- | --- |
    | resp\_timeout | Timeout in seconds to wait for the response |
    | resp | Pointer to the response buffer. This can be NULL to ignore the response. |
    | resp\_len | Input: length of the response buffer, Output: length of the response. This can be NULL. |

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) 0 for success

## [◆ ](#a935e3010e0a2d633e366711c09f634f1)mdm\_hl7800\_set\_bands()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_set\_bands | ( | const char \* | *bands* | ) |  |
| --- | --- | --- | --- | --- | --- |

Set the bands available for the LTE connection.

NOTE: This will cause the modem to reboot. This call returns before the reboot.

Parameters
:   | bands | Band bitmap in hexadecimal format without the 0x prefix. Leading 0's for the value can be omitted. |
    | --- | --- |

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) negative errno, 0 on success

## [◆ ](#a2388ecc33d15263091c63185ccda3ea3)mdm\_hl7800\_set\_desired\_sleep\_level()

| int mdm\_hl7800\_set\_desired\_sleep\_level | ( | enum [mdm\_hl7800\_sleep](#a3396149e553c32a597739096efe2aff7) | *level* | ) |  |
| --- | --- | --- | --- | --- | --- |

Set desired sleep level.

Requires MODEM\_HL7800\_LOW\_POWER\_MODE

Parameters
:   | level | (sleep, lite hibernate, or hibernate) |
    | --- | --- |

Returns
:   int negative errno, 0 on success

## [◆ ](#a1ca397e9e9db680dc6083ba2b4c08a70)mdm\_hl7800\_set\_functionality()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_set\_functionality | ( | enum [mdm\_hl7800\_functionality](#af999018ef3ca438a9d3cb7b6611300d2) | *mode* | ) |  |
| --- | --- | --- | --- | --- | --- |

Set airplane, normal, or reduced functionality mode.

Airplane mode persists when reset.

Note
:   Boot functionality is also controlled by Kconfig MODEM\_HL7800\_BOOT\_IN\_AIRPLANE\_MODE.

Parameters
:   | mode |  |
    | --- | --- |

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) negative errno, 0 on success

## [◆ ](#a2946b1d49c63084188f5f6c5dcebaaf2)mdm\_hl7800\_set\_gps\_rate()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_set\_gps\_rate | ( | [uint32\_t](stdint_8h.md#a0a8582351ac627ee8bde2973c825e47f) | *rate* | ) |  |
| --- | --- | --- | --- | --- | --- |

When rate is non-zero: Put modem into Airplane mode.

Enable GPS and generate HL7800\_EVENT\_GPS events. When zero: Disable GPS and put modem into normal mode.

Note
:   Airplane mode isn't cleared when the modem is reset.

Parameters
:   | rate | in seconds to query location |
    | --- | --- |

Returns
:   [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) negative errno, 0 on success

## [◆ ](#ae2015e7399a17a862048eed89b036c6d)mdm\_hl7800\_unregister\_event\_callback()

| int mdm\_hl7800\_unregister\_event\_callback | ( | struct [mdm\_hl7800\_callback\_agent](structmdm__hl7800__callback__agent.md) \* | *agent* | ) |  |
| --- | --- | --- | --- | --- | --- |

Unregister a callback event function.

Parameters
:   | agent | event callback agent |
    | --- | --- |

Return values
:   | 0 | on success, negative on failure |
    | --- | --- |

## [◆ ](#a3bf4e149e475d8a7c1f462c7de2dda80)mdm\_hl7800\_update\_apn()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_update\_apn | ( | char \* | *access\_point\_name* | ) |  |
| --- | --- | --- | --- | --- | --- |

Update the Access Point Name in the modem.

Return values
:   | 0 | on success, negative on failure. |
    | --- | --- |

## [◆ ](#a9d295b105e71346fcb283959d2641079)mdm\_hl7800\_update\_rat()

| [int32\_t](stdint_8h.md#a0c18914b3041c2f583aba76f418399c2) mdm\_hl7800\_update\_rat | ( | enum [mdm\_hl7800\_radio\_mode](#a2d26759e8ea3aca2e8e4a6cccac2361a) | *value* | ) |  |
| --- | --- | --- | --- | --- | --- |

Update the Radio Access Technology (mode).

Return values
:   | 0 | on success, negative on failure. |
    | --- | --- |

## [◆ ](#a0b3822e97cbb77f4edab74e8bf2c903e)mdm\_hl7800\_valid\_rat()

| [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) mdm\_hl7800\_valid\_rat | ( | [uint8\_t](stdint_8h.md#a3cb4a16b0e8d6af0af86d4fd6ba5fd9d) | *value* | ) |  |
| --- | --- | --- | --- | --- | --- |

Return values
:   | [true](stdbool_8h.md#a41f9c5fb8b08eb5dc3edce4dcb37fee7) | if RAT value is valid |
    | --- | --- |

## [◆ ](#a430e2a1e2e8173dab93cf7b1e1fcb24d)mdm\_hl7800\_wakeup()

| void mdm\_hl7800\_wakeup | ( | [bool](stdbool_8h.md#abb452686968e48b67397da5f97445f5b) | *awake* | ) |  |
| --- | --- | --- | --- | --- | --- |

Control the wake signals to the HL7800.

Note
:   this API should only be used for debug purposes.

Parameters
:   | awake | True to keep the HL7800 awake, False to allow sleep |
    | --- | --- |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [drivers](dir_49c63ef737d38af1498bd111c90a6556.md)
- [modem](dir_921fc901d44f7fec5fdbf8b941e64fce.md)
- [hl7800.h](hl7800_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.1.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
